--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,7 +36,9 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-
+        - { path: ^/myaccount, roles: ROLE_USER }
+        - { path: ^/basket, roles: ROLE_USER }
+        
 when@test:
     security:
         password_hashers:
