--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,9 +13,22 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        # API
+        login : 
+            pattern: ^/api/login
+            stateless: true
+            json_login:
+                check_path: /api/login
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+        api:
+            pattern: ^/api
+            stateless: true
+            jwt: ~
+
         main:
-            lazy: true
-            provider: app_user_provider
+            # lazy: true
+            # provider: app_user_provider
             form_login:
                 login_path: app_login
                 check_path: app_login
@@ -36,6 +49,8 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/api/login, roles: PUBLIC_ACCES }
+        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/myaccount, roles: ROLE_USER }
         - { path: ^/basket, roles: ROLE_USER }
         
