--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "symfony/serializer": "6.4.*",
         "symfony/stimulus-bundle": "^2.20",
         "symfony/string": "6.4.*",
+        "symfony/translation": "6.4.*",
         "symfony/twig-bundle": "6.4.*",
         "symfony/uid": "6.4.*",
         "symfony/ux-turbo": "^2.20",
