--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -49,7 +49,7 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/api/login, roles: PUBLIC_ACCES }
+        - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/myaccount, roles: ROLE_USER }
         - { path: ^/basket, roles: ROLE_USER }
